--- a/eaqb-framework/eaqb-spring-boot-starter-jackson/pom.xml
+++ b/eaqb-framework/eaqb-spring-boot-starter-jackson/pom.xml
@@ -3,22 +3,22 @@
     <modelVersion>4.0.0</modelVersion>
     <!-- 指定父项目 -->
     <parent>
-        <groupId>com.quanxiaoha</groupId>
-        <artifactId>xiaoha-framework</artifactId>
+        <groupId>com.zhoushuo</groupId>
+        <artifactId>eaqb-framework</artifactId>
         <version>${revision}</version>
     </parent>
 
     <!-- 指定打包方式 -->
     <packaging>jar</packaging>
 
-    <artifactId>xiaoha-spring-boot-starter-jackson</artifactId>
+    <artifactId>eaqb-spring-boot-starter-jackson</artifactId>
     <name>${project.artifactId}</name>
     <description>自定义 Jackson 配置: 支持 Java 8 新的日期 API，如 LocalDateTime、LocalDate 等等</description>
 
     <dependencies>
         <dependency>
-            <groupId>com.quanxiaoha</groupId>
-            <artifactId>xiaoha-common</artifactId>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-common</artifactId>
         </dependency>
         
         <dependency>
