--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,40 @@
     <mybatis-generator-maven-plugin.version>1.3.5</mybatis-generator-maven-plugin.version>
 
     <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
+
+    <sa-token.version>1.38.0</sa-token.version>
+
+    <guava.version>33.0.0-jre</guava.version>
+    <hutool.version>5.8.26</hutool.version>
+    <commons-lang3.version>3.12.0</commons-lang3.version>
+
+
+    <dypnsapi.version>2.0.0</dypnsapi.version>
   </properties>
 
   <!-- 统一依赖管理 -->
   <dependencyManagement>
+
     <dependencies>
+      <!-- 阿里云短信发送 -->
+      <dependency>
+        <groupId>com.aliyun</groupId>
+        <artifactId>dypnsapi20170525</artifactId>
+        <version>${dypnsapi.version}</version>
+      </dependency>
+      <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
+      <dependency>
+        <groupId>cn.dev33</groupId>
+        <artifactId>sa-token-redis-jackson</artifactId>
+        <version>${sa-token.version}</version>
+      </dependency>
+
+      <!-- Sa-Token 权限认证 -->
+      <dependency>
+        <groupId>cn.dev33</groupId>
+        <artifactId>sa-token-spring-boot3-starter</artifactId>
+        <version>${sa-token.version}</version>
+      </dependency>
 
 
       <!-- Mybatis -->
@@ -136,6 +165,25 @@
         <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <!-- 相关工具类 -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>cn.hutool</groupId>
+        <artifactId>hutool-all</artifactId>
+        <version>${hutool.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
       </dependency>
       <dependency>
         <groupId>com.zhoushuo</groupId>
