--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <nacos-config.version>0.3.0-RC</nacos-config.version>
     <!-- 项目版本号 -->
     <revision>0.0.1-SNAPSHOT</revision>
     <!-- JDK 版本 -->
@@ -47,7 +49,7 @@
 
     <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
 
-    <druid.version>1.2.21</druid.version>
+    <druid.version>1.2.23</druid.version>
 
     <mybatis-generator-maven-plugin.version>1.3.5</mybatis-generator-maven-plugin.version>
 
@@ -67,6 +69,15 @@
   <dependencyManagement>
 
     <dependencies>
+
+
+
+      <!-- Nacos 配置中心 -->
+      <dependency>
+        <groupId>com.alibaba.boot</groupId>
+        <artifactId>nacos-config-spring-boot-starter</artifactId>
+        <version>${nacos-config.version}</version>
+      </dependency>
       <!-- 阿里云短信发送 -->
       <dependency>
         <groupId>com.aliyun</groupId>
