--- a/eaqb-auth/pom.xml
+++ b/eaqb-auth/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
 
+        <!-- 密码加密 -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
 
         <!-- 服务注册发现 -->
         <dependency>
@@ -51,10 +57,10 @@
         </dependency>
 
         <!-- Redis 连接池 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-pool2</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>dypnsapi20170525</artifactId>
@@ -116,6 +122,11 @@
         <dependency>
             <groupId>com.zhoushuo</groupId>
             <artifactId>eaqb-spring-boot-starter-jackson</artifactId>
+        </dependency>
+
+        <dependency>
+                <groupId>com.zhoushuo</groupId>
+                <artifactId>eaqb-spring-boot-starter-biz-context</artifactId>
         </dependency>
 
         <!-- Sa-Token 权限认证 -->
