--- a/eaqb-framework/pom.xml
+++ b/eaqb-framework/pom.xml
@@ -24,6 +24,7 @@
         <!--接口日志模块-->
         <module>eaqb-spring-boot-starter-biz-operationlog</module>
         <module>eaqb-spring-boot-starter-jackson</module>
+        <module>eaqb-spring-boot-starter-biz-context</module>
     </modules>
 
 </project>
