--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,19 @@
 
 
     <dypnsapi.version>2.0.0</dypnsapi.version>
+
+    <transmittable-thread-local.version>2.14.2</transmittable-thread-local.version>
   </properties>
 
   <!-- 统一依赖管理 -->
   <dependencyManagement>
 
     <dependencies>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>transmittable-thread-local</artifactId>
+        <version>${transmittable-thread-local.version}</version>
+      </dependency>
 
 
       <dependency>
@@ -107,6 +114,7 @@
       </dependency>
 
 
+
       <!-- Mybatis -->
       <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
@@ -137,6 +145,11 @@
       <dependency>
           <groupId>com.zhoushuo</groupId>
         <artifactId>eaqb-spring-boot-starter-jackson</artifactId>
+        <version>${revision}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.zhoushuo</groupId>
+        <artifactId>eaqb-spring-boot-starter-biz-context</artifactId>
         <version>${revision}</version>
       </dependency>
 
