--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>eaqb-auth</module>
     <module>eaqb-framework</module>
     <module>eaqb-gateway</module>
+      <module>eaqb-oss</module>
 
   </modules>
 
@@ -62,6 +63,13 @@
     <hutool.version>5.8.26</hutool.version>
     <commons-lang3.version>3.12.0</commons-lang3.version>
 
+    <minio.version>8.2.1</minio.version>
+
+    <aliyun-sdk-oss.version>3.17.4</aliyun-sdk-oss.version>
+    <jaxb-api.version>2.3.1</jaxb-api.version>
+    <activation.version>1.1.1</activation.version>
+    <jaxb-runtime.version>2.3.3</jaxb-runtime.version>
+
 
     <dypnsapi.version>2.0.0</dypnsapi.version>
 
@@ -71,7 +79,40 @@
   <!-- 统一依赖管理 -->
   <dependencyManagement>
 
+
+
     <dependencies>
+
+      <!-- 阿里云 OSS -->
+      <dependency>
+        <groupId>com.aliyun.oss</groupId>
+        <artifactId>aliyun-sdk-oss</artifactId>
+        <version>${aliyun-sdk-oss.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${jaxb-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>${activation.version}</version>
+      </dependency>
+      <!-- no more than 2.3.3-->
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>${jaxb-runtime.version}</version>
+      </dependency>
+
+      <!-- 对象存储 Minio -->
+      <dependency>
+        <groupId>io.minio</groupId>
+        <artifactId>minio</artifactId>
+        <version>${minio.version}</version>
+      </dependency>
       <dependency>
         <groupId>com.alibaba</groupId>
         <artifactId>transmittable-thread-local</artifactId>
