正在开发用户信息接口，已搭建骨架

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>eaqb-framework</module>
     <module>eaqb-gateway</module>
       <module>eaqb-oss</module>
+      <module>eaqb-user</module>
 
   </modules>
 
