--- a/eaqb-oss/eaqb-oss-api/pom.xml
+++ b/eaqb-oss/eaqb-oss-api/pom.xml
@@ -7,7 +7,7 @@
         <version>${revision}</version>
     </parent>
 
-    <groupId>com.zhoushuo.eaqb.oss</groupId>
+
     <artifactId>eaqb-oss-api</artifactId>
     <packaging>jar</packaging>
 
@@ -20,9 +20,30 @@
     </properties>
 
     <dependencies>
+        <!-- Feign 表单提交 -->
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.zhoushuo</groupId>
             <artifactId>eaqb-common</artifactId>
         </dependency>
+        <!-- OpenFeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- 负载均衡 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
