--- a/eaqb-gateway/src/main/resources/application.yml
+++ b/eaqb-gateway/src/main/resources/application.yml
@@ -14,6 +14,13 @@ spring:
             - Path=/auth/**
           filters:
             - StripPrefix=1
+
+        - id: user
+          uri: lb://eaqb-user
+          predicates:
+            - Path=/user/**
+          filters:
+            - StripPrefix=1
   data:
     redis:
       database: 5 # Redis 数据库索引（默认为 0）
