--- a/eaqb-user/eaqb.user.biz/pom.xml
+++ b/eaqb-user/eaqb.user.biz/pom.xml
@@ -16,6 +16,12 @@
     <description>用户服务业务模块</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-oss-api</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
