重构认证服务，把用户有关的移到用户服务，解决服务刚启动时由于nacos服务发现导致线程切换导致satoken报错：无有效上下文，通过官方文档中的手动设置上下文解决

--- a/eaqb-user/eaqb-user-api/pom.xml
+++ b/eaqb-user/eaqb-user-api/pom.xml
@@ -25,6 +25,18 @@
             <groupId>com.zhoushuo</groupId>
             <artifactId>eaqb-common</artifactId>
         </dependency>
+        <!-- OpenFeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- 负载均衡 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
 
 
     </dependencies>
