--- a/eaqb-user/eaqb.user.biz/src/main/resources/config/application.yml
+++ b/eaqb-user/eaqb.user.biz/src/main/resources/config/application.yml
@@ -7,3 +7,5 @@ spring:
 mybatis:
   # MyBatis xml 配置文件路径
   mapper-locations: classpath:/mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
