--- a/eaqb-auth/pom.xml
+++ b/eaqb-auth/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-user-api</artifactId>
+        </dependency>
+
+
         <!-- 密码加密 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -107,11 +113,7 @@
             <artifactId>eaqb-common</artifactId>
         </dependency>
 
-        <!-- Druid 数据库连接池 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-3-starter</artifactId>
-        </dependency>
+
 
         <!-- 业务接口日志组件 -->
         <dependency>
@@ -135,25 +137,12 @@
             <artifactId>sa-token-spring-boot3-starter</artifactId>
         </dependency>
 
-        <!-- Mybatis -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
 
-        <!-- MySQL 驱动 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
