--- a/eaqb-gateway/src/main/resources/application.yml
+++ b/eaqb-gateway/src/main/resources/application.yml
@@ -27,14 +27,17 @@ spring:
       host: ${SERVER_IP} # Redis 服务器地址
       port: 6379 # Redis 服务器连接端口
       password: qwe123!@# # Redis 服务器连接密码（默认为空）
-      timeout: 5s # 读超时时间
-      connect-timeout: 5s # 链接超时时间
+      timeout: 10s # 读超时时间10
+      connect-timeout: 10s # 链接超时时间
       lettuce:
+        client:
+          keep-alive: true
         pool:
           max-active: 200 # 连接池最大连接数
           max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
-          min-idle: 0 # 连接池中的最小空闲连接
-          max-idle: 10 # 连接池中的最大空闲连接
+          min-idle: 5 # 连接池中的最小空闲连接
+          max-idle: 50 # 连接池中的最大空闲连接
+
 ############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
 sa-token:
   # token 名称（同时也是 cookie 名称）
