--- a/eaqb-user/eaqb.user.biz/src/main/resources/config/application-dev.yml
+++ b/eaqb-user/eaqb.user.biz/src/main/resources/config/application-dev.yml
@@ -38,6 +38,25 @@ spring:
         wall: # 防火墙
           config:
             multi-statement-allow: true
+  data:
+    redis:
+      database: 5 # Redis 数据库索引（默认为 0）
+      host: ${SERVER_IP} # Redis 服务器地址
+      port: 6379 # Redis 服务器连接端口
+      password: qwe123!@# # Redis 服务器连接密码（默认为空）
+      timeout: 5s # 读超时时间
+      connect-timeout: 5s # 链接超时时间
+      lettuce:
+        pool:
+          max-active: 200 # 连接池最大连接数
+          max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+          min-idle: 0 # 连接池中的最小空闲连接
+          max-idle: 10 # 连接池中的最大空闲连接
+mybatis:
+  # MyBatis xml 配置文件路径
+  mapper-locations: classpath:/mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 
 logging:
   level:
