完成了最最最最重要的一步。。返回完整的错误信息给用户，帮助用户获知哪些地方有问题（有点事去了一直没提交

--- a/eaqb-gateway/src/main/resources/application.yml
+++ b/eaqb-gateway/src/main/resources/application.yml
@@ -21,6 +21,13 @@ spring:
             - Path=/user/**
           filters:
             - StripPrefix=1
+
+        - id: excel-parser
+          uri: lb://eaqb-excel-parser
+          predicates:
+              - Path=/excel-parser/**
+          filters:
+              - StripPrefix=1
   data:
     redis:
       database: 5 # Redis 数据库索引（默认为 0）
