初步完成了文件解析接口，修改了返回值统一response包裹。。同时遇到了一个最无语的事情，服务器被黑了。导致我测试失败。。利用无密码的redis，修改配置把我我的redis变成他的从节点盗取了数据然后修改配置把redis的日志写入系统目录  因为docker的权限不足而失败，损失结果为少量的无用的数据，现已修复。

--- a/eaqb-question-bank/eaqb-question-bank-biz/pom.xml
+++ b/eaqb-question-bank/eaqb-question-bank-biz/pom.xml
@@ -16,6 +16,11 @@
     <description>题目服务业务模块</description>
 
     <dependencies>
+        <!-- 添加对 api 模块的依赖 -->
+        <dependency>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-question-bank-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -36,6 +41,12 @@
         <dependency>
             <groupId>com.zhoushuo</groupId>
             <artifactId>eaqb-oss-api</artifactId>
+        </dependency>
+
+        <!-- 文件的主键需要id -->
+        <dependency>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-distributed-id-generator-api</artifactId>
         </dependency>
 
         <dependency>
@@ -94,6 +105,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <!-- 服务发现 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- 配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -102,6 +127,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <!-- 代码生成器 -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
