--- a/eaqb-excel-parser/eaqb-excel-parser.biz/pom.xml
+++ b/eaqb-excel-parser/eaqb-excel-parser.biz/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--  Question Bank 服务调用-->
+        <dependency>
+            <groupId>com.zhoushuo</groupId>
+            <artifactId>eaqb-question-bank-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
