--- a/eaqb-question-bank/eaqb-question-bank-biz/src/main/resources/config/bootstrap.yml
+++ b/eaqb-question-bank/eaqb-question-bank-biz/src/main/resources/config/bootstrap.yml
@@ -10,3 +10,10 @@ spring:
         group: DEFAULT_GROUP # 所属组
         namespace: eaqb # 命名空间
         server-addr: ${SERVER_IP}:8848 # 指定 Nacos 配置中心的服务器地址
+      config:
+        server-addr: http://${SERVER_IP}:8848 # 指定 Nacos 配置中心的服务器地址
+        prefix: ${spring.application.name} # 配置 Data Id 前缀，这里使用应用名称作为前缀
+        group: DEFAULT_GROUP # 所属组
+        namespace: eaqb # 命名空间
+        file-extension: yaml # 配置文件格式
+        refresh-enabled: true # 是否开启动态刷新
