--- a/eaqb-question-bank/eaqb-question-bank-biz/src/main/resources/config/application.yml
+++ b/eaqb-question-bank/eaqb-question-bank-biz/src/main/resources/config/application.yml
@@ -9,3 +9,8 @@ mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
+# application.yml
+pagehelper:
+  helper-dialect: mysql  # 指定数据库方言，例如 mysql, oracle 等
+  reasonable: true       # 启用分页合理化，当页码超出范围时会智能处理
+  support-methods-arguments: true # 支持通过Mapper接口参数传递分页参数
