--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
       <dependency>
         <groupId>com.github.pagehelper</groupId>
         <artifactId>pagehelper-spring-boot-starter</artifactId>
-        <version>${pagehelper.version}</version> <!-- 请留意检查并使用最新版本 -->
+        <version>${pagehelper.version}</version>
       </dependency>
 
       <!-- easyexcel -->
