--- a/eaqb-question-bank/eaqb-question-bank-biz/pom.xml
+++ b/eaqb-question-bank/eaqb-question-bank-biz/pom.xml
@@ -123,6 +123,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+
+        </dependency>
 
     </dependencies>
 
